--- a/friends.html
+++ b/friends.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Talk</title>
+    <title>Friends - Kokoa Clone</title>
 </head>
 <body>
     <div class="status-bar">
@@ -22,17 +22,18 @@
             <i class="fa-solid fa-bolt-lightning"></i>
         </div>
     </div>
-    <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to Kokoa Talk</h1>
-        <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.</p>
-    </header>
-    <form action="friends.html" method="get" id="login-form">
-        <input name="usesrname" type="text" placeholder="Email or phone number" />
-        <input name="password" type="password" placeholder="Password" />
-        <input type="submit" value="Log In" />
-        <a href="#">Find Kokoa Account or Password</a>
-    </form>
-    
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__btn">
+                <a class="nav__"  href="friends.html"><i class="fa-solid fa-user fa-lg"></i></a></li>
+            <li class="nav__btn">
+                <a class="nav__" href="#"><i class="fa-solid fa-comment fa-lg"></i></a></li>
+            <li class="nav__btn">
+                <a class="nav__" href="#"><i class="fa-solid fa-magnifying-glass fa-lg"></i></a></li>
+            <li class="nav__btn">
+                <a class="nav__" href="#"><i class="fa-solid fa-ellipsis fa-lg"></i></a></li>
+        </ul>
+    </nav>
     <script src="https://kit.fontawesome.com/e8c47bdc27.js" crossorigin="anonymous"></script>
 </body>
 </html>
