--- a/find.html
+++ b/find.html
@@ -27,7 +27,7 @@
         <h1 class="screen-header__title">Find</h1>
         <div class="screen-header__icon">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-            <span><i class="fa-solid fa-gear fa-lg"></i></span>
+            <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
         </div>
     </header>
 
