--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - Kokoa Clone</title>
+    <title>Settings - Kokoa Clone</title>
 </head>
 <body>
     <div class="status-bar">
@@ -23,31 +23,30 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icon">
-            <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-            <span><i class="fa-solid fa-comment-dots fa-lg"></i></span>
-            <span><i class="fa-solid fa-music fa-lg"></i></span>
-            <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
-        </div>
-    </header>
+<header class="alt-header">
+    <div class="alt-header__column">
+        <i class="fa-solid fa-chevron-left fa-lg"></i>
+    </div>
+    <div class="alt-header__column">
+        <h1 class="alt-header__title">Settings</h1>
+    </div>
+    <div class="alt-header__column">
+        <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+    </div>
+</header>
 
 <main class="main-screen">
-    <div class="user-component">
-        <div class="user-component__column">
-            <img src="suyoon.GIF" 
-            class="user-component__avatar user-component__avatar" />
-            <div class="user-component__text">
-                <h4 class="user-component__title">Suyoon</h4>
-                <h6 class="user-component__subtitle">Please check my Account info</h6>
-            </div>
-        </div>
-        <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">99</div>
-        </div>
-    </div>
+    <ul class="settings-list">
+        <li class="settings__setting"><i class="fa-solid fa-bullhorn"></i>
+            <span>Notices</span>
+        </li>
+        <li class="settings__setting"><i class="fa-solid fa-flask"></i>
+            <span>Kokoa Lab</span>
+        </li>
+        <li class="settings__setting"><i class="fa-solid fa-circle-info"></i>
+            <span>Version</span>
+        </li>
+    </ul>
 </main>
 
     <nav class="nav">
